Blender crash for mesh with string attribute. #101660

Closed
opened 2022-10-06 23:09:15 +02:00 by Xing Wang · 17 comments

System Information
Operating system: 'Linux-5.13.0-51-generic-x86_64-with-glibc2.31'
Graphics card: Mesa Intel(R) UHD Graphics (CML GT2)

Blender Version
Broken: 3.3, 3.4
Exposed by 25c8d72e20, but really caused by the move to CPPType 31365c6b9e / 2252bc6a55

Short description of error
Blender crashed when adding "Instance on Points Node" to mesh with a string attribute.

Exact steps for others to reproduce the error

  • use the default cube.
  • add a geometry node to the cube.
  • add "Instance on Points Node", and link the Group Input "Geometry" socket to the "Points" socket, and link the "Instances" socket to Group Output "Geometry" socket.
  • go to the "Attribute" panel in "Object data properties", and try to add a "String" attribute.

#101660.blend


Other information
May be related to another bug: https://developer.blender.org/T100747

**System Information** Operating system: 'Linux-5.13.0-51-generic-x86_64-with-glibc2.31' Graphics card: Mesa Intel(R) UHD Graphics (CML GT2) **Blender Version** Broken: 3.3, 3.4 Exposed by 25c8d72e20, but really caused by the move to CPPType 31365c6b9e / 2252bc6a55 **Short description of error** Blender crashed when adding "Instance on Points Node" to mesh with a string attribute. **Exact steps for others to reproduce the error** - use the default cube. - add a geometry node to the cube. - add "Instance on Points Node", and link the Group Input "Geometry" socket to the "Points" socket, and link the "Instances" socket to Group Output "Geometry" socket. - go to the "Attribute" panel in "Object data properties", and try to add a "String" attribute. [#101660.blend](https://archive.blender.org/developer/F13626152/T101660.blend) --- **Other information** May be related to another bug: https://developer.blender.org/T100747
Author

Added subscriber: @superstar54

Added subscriber: @superstar54
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can redo the crash locally. I'll check

Thanks for the report. I can redo the crash locally. I'll check
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

May be related to another bug: https://developer.blender.org/T100747

Indeed.
25c8d72e20 is the first bad commit
@lichtwerk ^

> May be related to another bug: https://developer.blender.org/T100747 Indeed. 25c8d72e20 is the first bad commit @lichtwerk ^

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Looks strange. In addition to the fact that there should not be a crash due to the string, it should not be possible to make a string attribute ...

Looks strange. In addition to the fact that there should not be a crash due to the string, it should not be possible to make a string attribute ...
Member

Will check.

In #101660#1428986, @mod_moder wrote:
it should not be possible to make a string attribute ...

why?

Will check. > In #101660#1428986, @mod_moder wrote: > it should not be possible to make a string attribute ... why?
Philipp Oeser self-assigned this 2022-10-07 12:34:31 +02:00

It's not supported yet, so why? But that's just what was on my mind, in general, you can ask someone above

It's not supported yet, so why? But that's just what was on my mind, in general, you can ask someone above
Member

There are a couple of loose ends with the CPPType stuff, but I think we should at least fill these wholes to not make blender crash.
Only other solution would be to remove string support all togther (also from the UI)

There are a couple of loose ends with the `CPPType` stuff, but I think we should at least fill these wholes to not make blender crash. Only other solution would be to remove string support all togther (also from the UI)
Author

@lichtwerk Great thanks for your help!

As a user, I think the string attribute is very useful. I really hope Blender can keep this feature.

The crash happens when using the geometry node for mesh with string attribute. So is there any possible solution that decouples the geometry node and string attribute?

@lichtwerk Great thanks for your help! As a user, I think the string attribute is very useful. I really hope Blender can keep this feature. The crash happens when using the geometry node for mesh with string attribute. So is there any possible solution that decouples the geometry node and string attribute?
Member

Added subscribers: @HooglyBoogly, @JacquesLucke

Added subscribers: @HooglyBoogly, @JacquesLucke
Philipp Oeser removed their assignment 2022-10-09 14:15:48 +02:00
Member

Not totally sure how much work this really is.
I have started implementing stuff for string attributes (see P3245) but also checked with @HooglyBoogly in chat and it seems strings are not ready for primetime in GN.
So maybe there is a way to exclude these (instead of implementing the needed stuff), but I would prefer to leave these for others.

Will step down since 25c8d72e20 did not really cause the crashes (just exposed the fact that these are not covered by 31365c6b9e / 2252bc6a55)

Not totally sure how much work this really is. I have started implementing stuff for string attributes (see [P3245](https://archive.blender.org/developer/P3245.txt)) but also checked with @HooglyBoogly in chat and it seems strings are not ready for primetime in GN. So maybe there is a way to exclude these (instead of implementing the needed stuff), but I would prefer to leave these for others. Will step down since 25c8d72e20 did not really cause the crashes (just exposed the fact that these are not covered by 31365c6b9e / 2252bc6a55)
Member

Support for string attributes in geometry nodes is indeed intentionally limited currently. More design work is necessary to figure out how they should work. I just committed a2fcfcabd7 which solves part of the problem. To really fix it we'll probably have to add a check in all nodes that propagate attributes so that they don't propagate string attributes for now.

Support for string attributes in geometry nodes is indeed intentionally limited currently. More design work is necessary to figure out how they should work. I just committed a2fcfcabd7 which solves part of the problem. To really fix it we'll probably have to add a check in all nodes that propagate attributes so that they don't propagate string attributes for now.

This issue was referenced by 91e85230f9

This issue was referenced by 91e85230f9c1b490f7424b9da7bbd65b7c0c4068
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-10-18 17:17:23 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101660
No description provided.