Fix T101660: crash when trying to propagate string attributes in some nodes

String attributes are intentionally not fully supported in geometry nodes
yet because more design work is necessary to decide how they should behave.

For now just disable handling string attributes to avoid crashes.