source/blender/blenkernel/intern/curve_to_mesh_convert.cc
@@ -332,7 +332,8 @@ static eAttrDomain get_attribute_domain_for_mesh(const AttributeAccessor &mesh_a
 
 static bool should_add_attribute_to_mesh(const AttributeAccessor &curve_attributes,
                                          const AttributeAccessor &mesh_attributes,
-                                         const AttributeIDRef &id)
+                                         const AttributeIDRef &id,
+                                         const AttributeMetaData &meta_data)
 {
 
   /* The position attribute has special non-generic evaluation. */
@@ -344,6 +345,9 @@ static bool should_add_attribute_to_mesh(const AttributeAccessor &curve_attribut
     return false;
   }
   if (!id.should_be_kept()) {
+    return false;
+  }
+  if (meta_data.data_type == CD_PROP_STRING) {
     return false;
   }
   return true;
@@ -714,7 +718,7 @@ Mesh *curve_to_mesh_sweep(const CurvesGeometry &main,
   MutableAttributeAccessor mesh_attributes = mesh->attributes_for_write();
 
   main_attributes.for_all([&](const AttributeIDRef &id, const AttributeMetaData meta_data) {
-    if (!should_add_attribute_to_mesh(main_attributes, mesh_attributes, id)) {
+    if (!should_add_attribute_to_mesh(main_attributes, mesh_attributes, id, meta_data)) {
       return true;
     }
     main_attributes_set.add_new(id);
@@ -751,7 +755,7 @@ Mesh *curve_to_mesh_sweep(const CurvesGeometry &main,
     if (main_attributes.contains(id)) {
       return true;
     }
-    if (!should_add_attribute_to_mesh(profile_attributes, mesh_attributes, id)) {
+    if (!should_add_attribute_to_mesh(profile_attributes, mesh_attributes, id, meta_data)) {
       return true;
     }
     const eAttrDomain src_domain = meta_data.domain;
